objects/cic_credit__CIC_Credentials_public__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting is deprecated and is no longer supported in this package.</description>
    <fields>
        <fullName>cic_credit__cicEndPoint__c</fullName>
        <label>Depricated</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>cic_credit__clientId__c</fullName>
        <label>Depricated</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__clientSecret__c</fullName>
        <label>Depricated</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__password__c</fullName>
        <label>Depricated</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__serviceURL__c</fullName>
        <label>Depricated</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>cic_credit__surrogateID__c</fullName>
        <label>Depricated</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__username__c</fullName>
        <label>Depricated</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Deprecated</label>
</CustomObject>